  the weakrefs to proxy objects isn't very usefull the entire feature has 
  been removed: It is no longer possible to create weakrefs to Objective-C
  objects. 

  NOTE: You could create weakrefs in previous versions, but those would
  expire as soon as the last reference from Python died, *not* when the 
  Objective-C object died.

Version 0.9.1 (May-??-2003):

- Fixed some glitches in the documentation

Version 0.9 (May-02-2003):
- This version includes numerous bugfixes and improvements.

- The module AppKit.NibClassBuilder has been moved to the package
  PyObjCTools.

- Usage of libFFI (http://sources.redhat.com/libffi) is now mandatory. The
  setup.py gives the impression that it isn't, but we do *not* support 
  non-FFI builds.

- We actually have some documentation, more will be added in future releases.

- There are more Project Builder templates (see 'Project Templates').

- The InterfaceBuilder, PreferencePanes and ScreenSaver frameworks have been
  wrapped.

- Management of reference counts is now completely automatic, it is no longer
  necessary to manually compensate for the higher reference count of objects 
  returned by the alloc, copy and copyWithZone: class methods.

- Various function and keyword arguments have been renamed for a better 
  integration with Cocoa. A partial list is of the changed names is:
  	objc.lookup_class -> objc.lookUpClass
	objc.selector arguments/attributes:
		is_initializer -> isInitializer
		is_allocator -> isAlloc
		donates_ref -> doesDonateReference
		is_required -> isRequired
		class_method -> isClassMethod
		defining_class -> definingClass
		returns_self -> returnsSelf
		argument_types -> argumentTypes
		return_type -> returnType
	objc.get_class_list -> objc.getClassList

- On Python 2.2, objc.YES and objc.NO are instances of a private boolean type,
  on Python 2.3 these are instances of the builtin type bool.

- Because we now use libFFI a large amount of code could be disabled. The